# Game_Engine12

./: .gitignore  CMakeLists.txt  GameEngine.sln  install_deps.bat  vcpkg.json
GameEngine/: AnimationManager.cpp  AnimationManager.h  AppTimer.cpp  AppTimer.h  AssetManager.cpp  AssetManager.h  BLASBuilder.cpp  BLASBuilder.h  BRDF_PS.hlsl  BaseEntity12.cpp  BaseEntity12.h  Camera.cpp  ComponentStorage12.h  ConstantBuffer12.h  ConstantBufferTypes.h  CubeEntity12.cpp  CubeEntity12.h  CubeMap.cpp  CubeMap.h  CubeShape12.cpp  CubeShape12.h  CubemapDebug_PS.hlsl  CubemapDebug_VS.hlsl  Cubemap_PS.hlsl  Cubemap_VS.hlsl  DX12.cpp  DX12.h  DX12Includes.h  DX12_GLOBALS.h  DXCShaderCompiler.cpp  DXCShaderCompiler.h  DeferredLightPassPS.cso  DeferredLightPassPS.hlsl  DescriptorAllocator.cpp  DescriptorAllocator.h  DynamicUploadBuffer.h  ECSHeader.h  ECSWorld.cpp  ECSWorld.h  Engine.cpp  (+87 more)
GameEngine/Save files/: Scene1  Scene2
scripts/: bootstrap-vcpkg.cmake
